# 2DGame

./: CMakeLists.txt  GameState.hpp  glm-config.cmake  sdl2-config.cmake  sdl2image-config.cmake
include/entities/: BouncingBall.hpp  Player.hpp  entity.hpp
include/game/: Camera.hpp  Gamepad.hpp  Level.hpp  Tile.hpp  game.hpp
include/interfaces/: IControlable.hpp  IDrawable.hpp  IInitializable.hpp  IUpdatable.hpp
include/surface/: surface.hpp
include/texture/: texture.hpp
include/window/: window.hpp
src/: CMakeLists.txt  main.cpp
src/entities/: BouncingBall.cpp  Player.cpp
src/game/: Camera.cpp  Gamepad.cpp  Level.cpp  Tile.cpp  game.cpp
src/surface/: surface.cpp
src/texture/: texture.cpp
src/window/: window.cpp
